--- a/index.html
+++ b/index.html
@@ -22,10 +22,26 @@
 
 
 
-    
+        <!-- Task #2 -->
+        <div class="task2_div">
+            <img src="kitten.jpg" alt="kitten">
+            <figcaption>Sphynx are the most adorable, cuddly, sweetest cats you will ever have.</figcaption>
+        </div>
+
+
+<!-- Task #3 -->
+<h1>Text</h1>
 
 
 
+
+
+
+
+<!-- Task #6 -->
+<div class="task6_div">
+    <p>Loading...</p>
+</div>
 
 
 
