--- a/index.html
+++ b/index.html
@@ -29,19 +29,36 @@
         </div>
 
 
-<!-- Task #3 -->
-<h1>Text</h1>
+        <!-- Task #3 -->
+        <h1 class="task3">Text</h1>
+
+        <!-- Task #4 -->
+        <div class="task4_div">
+            <h1 class="task4_text">STOP</h1>
+        </div>
+
+
+        <!-- Task#5 -->
+        <header>
+            <nav>
+                <ul class="header_ul">
+                    <li><a class="header_li" href="">HOME</a></li>
+                    <li><a class="header_li" href="">ABOUT</a></li>
+                    <li><a class="header_li" href="">CONTACT</a></li>
+                </ul>
+            </nav>
+        </header>
 
 
 
 
 
 
-
-<!-- Task #6 -->
-<div class="task6_div">
-    <p>Loading...</p>
-</div>
+        <!-- Task #6 -->
+        <!-- <div class="task6_div">
+<div class="task6_loader"></div>
+<p>Loading...</p>
+</div> -->
 
 
 
