--- a/index.html
+++ b/index.html
@@ -17,17 +17,14 @@
 
         <!-- Task #1 -->
         <div class="task1_div">
-            <button>B U T T O N</button>
+            <button>BUTTON</button>
         </div>
-
-
 
         <!-- Task #2 -->
         <div class="task2_div">
             <img src="kitten.jpg" alt="kitten">
             <figcaption>Sphynx are the most adorable, cuddly, sweetest cats you will ever have.</figcaption>
         </div>
-
 
         <!-- Task #3 -->
         <h1 class="task3">Text</h1>
@@ -37,8 +34,7 @@
             <h1 class="task4_text">STOP</h1>
         </div>
 
-
-        <!-- Task#5 -->
+        <!-- Task #5 -->
         <header>
             <nav>
                 <ul class="header_ul">
@@ -49,16 +45,12 @@
             </nav>
         </header>
 
-
-
-
-
-
         <!-- Task #6 -->
-        <!-- <div class="task6_div">
-<div class="task6_loader"></div>
-<p>Loading...</p>
-</div> -->
+        <div class="task6_div">
+            <div class="task6_loader">
+                <p>Loading...</p>
+            </div>
+        </div>
 
 
 
